Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjNumberField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Boolean
        number var = 5.0
        return var
    end
end